WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
56021
[chromium]: Regression - Explicitly copy compositing properties from LayerChromium to CCLayerImpl
https://bugs.webkit.org/show_bug.cgi?id=56021
Summary
[chromium]: Regression - Explicitly copy compositing properties from LayerChr...
Jonathan Backer
Reported
2011-03-09 09:07:50 PST
The patch associated with
https://bugs.webkit.org/show_bug.cgi?id=55900
causes a regression on 3D CSS on Linux, Mac, and Windows. To repro on my machine, I go to
http://www.webkit.org/blog-files/3d-transforms/poster-circle.html
: only half of the rotating figure appears.
Attachments
Patch
(5.13 KB, patch)
2011-03-09 14:19 PST
,
James Robinson
kbr
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
James Robinson
Comment 1
2011-03-09 11:37:14 PST
Looking.
James Robinson
Comment 2
2011-03-09 13:00:32 PST
FYI this patch landed after the 696 branch point, so m11 should be unaffected.
James Robinson
Comment 3
2011-03-09 13:42:53 PST
The fix is easy (I forgot to initialize m_doubleSided in LayerChromium) - but the more interesting thing is that apparently we have no layout test coverage for double sided layers. D'oh! Will construct a proper test and then post a patch.
James Robinson
Comment 4
2011-03-09 14:19:49 PST
Created
attachment 85234
[details]
Patch
James Robinson
Comment 5
2011-03-09 14:21:58 PST
Patch fixes the bug and adds a test. The -5000px offset on the text is ugly, but it's the only way I could figure out to put something informative in the -expected.txt without getting text into the pixel output. It'd be nice if we had a more standard way to do this sort of thing.
Kenneth Russell
Comment 6
2011-03-09 14:25:12 PST
Comment on
attachment 85234
[details]
Patch Nice catch and test case.
James Robinson
Comment 7
2011-03-09 14:27:58 PST
Committed
r80665
: <
http://trac.webkit.org/changeset/80665
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug