2011-03-09  James Robinson  <jamesr@chromium.org>

Reviewed by Kenneth Russell.

        [chromium]: Regression - Explicitly copy compositing properties from LayerChromium to CCLayerImpl
        https://bugs.webkit.org/show_bug.cgi?id=56021

        Adds a test for basic functionality of the backface-visibility
        property.

        * compositing/backface-visibility-expected.checksum: Added.
        * compositing/backface-visibility-expected.png: Added.
        * compositing/backface-visibility-expected.txt: Added.
        * compositing/backface-visibility.html: Added.
2011-03-09  James Robinson  <jamesr@chromium.org>

        Reviewed by Kenneth Russell.

        [chromium]: Regression - Explicitly copy compositing properties from LayerChromium to CCLayerImpl
        https://bugs.webkit.org/show_bug.cgi?id=56021

        Initializes the m_doubleSided flag of LayerChromiums to the default
        value of true so the back sides of layers without
        backface-visibility:hidden are rendered.

        Test: compositing/backface-visibility.html

        * platform/graphics/chromium/LayerChromium.cpp:
        (WebCore::LayerChromium::LayerChromium):

Canonical link: https://commits.webkit.org/70556@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@80665 268f45cc-cd09-0410-ab3c-d52691b4dbfc